fix: use native scrollbar styling

--- a/src/components/ChatRoom/ChatRoom.css
+++ b/src/components/ChatRoom/ChatRoom.css
@@ -11,31 +11,6 @@
 }
 
 
-
-.chat::-webkit-scrollbar {
-  width: 0.25rem;
-
-}
-
-.chat::-webkit-scrollbar-track {
-  background: lightblue;
-}
-
-.chat::-webkit-scrollbar-thumb {
-  background: salmon;
-
-}
-
-/* form {
-  height: 10vh;
-  width: 80%;
-  position: fixed;
-  bottom: 0;
-  left: 80px;
-  background-color: white;
-  font-size: 1.5rem;
-} */
-
 ul,
 li {
   text-align: left;
